tests/ui/parser/keyword.stderr
error: expected identifier, found keyword `break`
  --> $DIR/keyword.rs:1:9
   |
LL | pub mod break {
   |         ^^^^^ expected identifier, found keyword
   |
help: escape `break` to use it as an identifier
   |
LL | pub mod r#break {
   |         ++

error: aborting due to 1 previous error

