tests/ui/parser/keyword.rs
pub mod break {
    //~^ ERROR expected identifier, found keyword `break`
}

fn main() {}
